--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,8 @@
 .city-app ul {
-  height: 300px;
-  width: 300px;
+  /* height: 300px; */
+  /* width: 300px; */
   overflow-y: scroll;
-  background-color: #eee;
+  /* background-color: #eee; */
   padding: 0;
   list-style: none;
   position: relative;
